--- a/exprement.html
+++ b/exprement.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        *{
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box;
+        }
+        body{
+            background: url("./src/assets/react.svg");
+            background-repeat: no-repeat;
+            background-position: left;
+            background-size: contain;
+        }
+    </style>
 </head>
 <body>
-    
+    <h2>Hell world</h2>
 </body>
 </html>
